--- a/index.html
+++ b/index.html
@@ -264,13 +264,12 @@
                 <div id="statusHemkop" class="status"></div>
             </div>
 
-            <div class="card">
-                <h2>🏪 Willys Recipes <span class="badge">ACTIVE</span></h2>
-                <p>Discover budget-friendly Swedish recipes from Willys, including Tareq Taylor's weekend recipes.</p>
-                <button class="btn" onclick="scrapeMeals('scrapeWillys')" id="btnWillys">
-                    Scrape 10 Meals (Willys)
+            <div class="card coming-soon">
+                <h2>🏪 Willys Recipes <span class="badge soon">N/A</span></h2>
+                <p>Willys doesn't have a recipe section. Use MealDB, ICA, or Hemköp instead.</p>
+                <button class="btn" disabled>
+                    No Recipes Available
                 </button>
-                <div id="statusWillys" class="status"></div>
             </div>
         </div>
 
